# pcltest

./: Makefile  cmake_install.cmake  main(copy).cpp  main.cpp  main.h  ptest
datacapture/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Protonect  capture  capture_debug  cmake_install.cmake  config.h  data3.pcd  filter.cpp  main.cpp  main.h  passthrough.cpp  ptest  rgbviewer
feature/: 0_6_vfh.pcd  0_7_vfh.pcd  0_8_vfh.pcd  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  VFH.cpp  back  bottle0.pcd  bottle0_filted_vfh.pcd  build_tree  build_tree.cpp  cmake_install.cmake  kdtree.idx  nearest_neighbors  nearest_neighbors.cpp  ptest  test.sh  test.sh~  training_data.h5  training_data.list
feature/cup_f/: f0_0_vfh.pcd  f11_0.pcd  f11_0_vfh.pcd  f3_0.pcd  f4_0.pcd  f5_0_vfh.pcd  f6_0_vfh.pcd  f7_0.pcd
feature/data/cup/: 11_0.pcd  11_0_vfh.pcd  4_0.pcd  4_0_vfh.pcd  5_0.pcd  5_0_vfh.pcd  6_0_vfh.pcd  8_0.pcd  8_0_vfh.pcd  9_0_vfh.pcd
filter/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Passthrough_Filter  Passthrough_Filter.cpp  cmake_install.cmake  data_deskwithcup.pcd  data_outliers.pcd  downsample  downsample.cpp  filter  main.cpp
mainwork/: CMakeLists.txt  CMakeLists.txt~  Makefile  filter.cpp  filter.h  main.cpp  normal.h  segement.cpp  segement.h  viewer.cpp
mainwork/interface/: main.cpp  main.h
mainwork/src/: CMakeLists.txt  CMakeLists.txt~  buildmodel.cpp  capture.cpp  capture.h  feature.h  filter.cpp  interface.cpp  interface.h  main.cpp  normal.cpp  normal.h  segement.cpp
mainwork/src/iai/: calib_color.yaml  calib_depth.yaml  depth_registration_cpu.cpp
mainwork/src/tempbuild/: CMakeCache.txt  CMakeLists.txt~  Makefile  buildmodel  capture  cmake_install.cmake  interface  kdtree.idx  temp_vfh.pcd  temptest  training_data.h5  training_data.list
mainwork/src/tempbuild/cap/: orig0.pcd  orig1.pcd  orig10.pcd  orig11.pcd  orig12.pcd  orig13.pcd  orig2.pcd  orig3.pcd  orig4.pcd  orig5.pcd  orig6.pcd  orig7.pcd  orig8.pcd  orig9.pcd
mainwork/src/tempbuild/data/cup/: 0_0.pcd  6_0.pcd  7_0_vfh.pcd  cup10_vfh.pcd  cup11_vfh.pcd  cup13_vfh.pcd  cup2.pcd  cup2_vfh.pcd  cup4.pcd  cup4_vfh.pcd  cup5_vfh.pcd  cup6_vfh.pcd  cup7.pcd  cup7_vfh.pcd  cup8_vfh.pcd  cup9_vfh.pcd
mainwork/src/tempbuild/data/cup_f/: f1_0.pcd  f3_0_vfh.pcd  f4_0_vfh.pcd  f6_0.pcd
mainwork/src/tempbuild/model/: cup0.pcd  cup0_vfh.pcd  cup1.pcd  cup10.pcd  cup11.pcd  cup12.pcd  cup12_vfh.pcd  cup13.pcd  cup1_vfh.pcd  cup3.pcd  cup3_vfh.pcd  cup5.pcd  cup6.pcd  cup8.pcd  cup9.pcd
mainwork/src/tempbuild/seg/: 0_0.pcd  0_0_vfh.pcd  0_1.pcd  0_10.pcd  0_10_vfh.pcd  0_11.pcd  0_11_vfh.pcd  0_12.pcd  0_12_vfh.pcd  0_13.pcd  0_13_vfh.pcd  0_14.pcd  0_14_vfh.pcd  0_15.pcd  0_15_vfh.pcd  0_16.pcd  0_16_vfh.pcd  0_17.pcd  0_17_vfh.pcd  0_18.pcd  0_18_vfh.pcd  0_19.pcd  0_19_vfh.pcd  0_1_vfh.pcd  0_2.pcd  0_20.pcd  0_20_vfh.pcd  0_21.pcd  0_21_vfh.pcd  0_22.pcd  0_22_vfh.pcd  0_23.pcd  0_23_vfh.pcd  0_2_vfh.pcd  0_3.pcd  0_3_vfh.pcd  0_4.pcd  0_4_vfh.pcd  0_5.pcd  0_5_vfh.pcd  (+8 more)
test/: 0_8.pcd  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  VFH.cpp  VFH.h  buildmodel  buildmodel.cpp  capture  capture.cpp  capture.h  cloud_trueplane.pcd  cmake_install.cmake  cupfilted_vfh.pcd  data_p.pcd  feature.cpp  feature.h  filter.cpp  filter.h  interface  interface.cpp  interface.h  main.cpp  milk_filted_vfh.pcd  mviewer  normal.cpp  pcltest  segcup.pcd  segement.cpp  segement.h  segtest  segtest.cpp  temp_vfh.pcd  training_data.h5  training_data.list  vfh.pcd  vfhtest  vfhtest.cpp  viewer.cpp  (+4 more)
test/cap/: orig0.pcd  orig1.pcd  orig10.pcd  orig11.pcd  orig2.pcd  orig3.pcd  orig4.pcd  orig5.pcd  orig6.pcd  orig7.pcd  orig8.pcd  orig9.pcd
test/cup/: 10_0_vfh.pcd  1_0.pcd  1_0_vfh.pcd  2_0.pcd  3_0_vfh.pcd  9_0.pcd  viewer
test/cup_f/: f10_0.pcd  f1_0_vfh.pcd  f2_0.pcd  f2_0_vfh.pcd  f5_0.pcd  f8_0.pcd  f8_0_vfh.pcd  f9_0_vfh.pcd
test/data/cup/: 0_0_vfh.pcd  2_0_vfh.pcd  7_0.pcd
test/data/cup_f/: f0_0.pcd  f10_0_vfh.pcd  f7_0_vfh.pcd  f9_0.pcd
test/seg/: 0.pcd  0_0.pcd  0_0_vfh.pcd  0_1.pcd  0_10.pcd  0_10_vfh.pcd  0_11.pcd  0_11_vfh.pcd  0_12.pcd  0_12_vfh.pcd  0_13.pcd  0_13_vfh.pcd  0_14.pcd  0_14_vfh.pcd  0_15.pcd  0_15_vfh.pcd  0_1_vfh.pcd  0_2.pcd  0_2_vfh.pcd  0_3.pcd  0_3_vfh.pcd  0_4.pcd  0_4_vfh.pcd  0_5.pcd  0_5_vfh.pcd  0_6.pcd  0_6_vfh.pcd  0_7.pcd  0_7_vfh.pcd  0_8.pcd  0_8_vfh.pcd  0_9.pcd  0_9_vfh.pcd  1.pcd  2.pcd  4.pcd
test/seg2/: 1.pcd  10_0.pcd  10_1.pcd  3_0.pcd
viewer/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  main.cpp  pcd_viewer  viewer.cpp  viewer.h
(+71 files in other folders)
